--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/BaddingtonGags" target="_blank"><i class="ion-social-facebook"></i></a></li>
           <!-- <li><a href="#"><i class="ion-social-twitter"></i></a></li>
           <li><a href="#"><i class="ion-social-instagram"></i></a></li>
           <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
