added og image tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="shortcut icon" href="images/favicon.png">
 
   <!-- OG Tags -->
-  <meta property="og:image" content="images/poop.jpeg" />
+  <meta property="og:image" content="https://www.stinkyturdface.com/images/poop.jpeg" />
 
 
 </head>
