--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
 
+  <!-- OG Tags -->
+  <meta property="og:image" content="images/poop.jpg" />
+
+
 </head>
 
 <body>
