Updated OG tags

--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
   <link rel="shortcut icon" href="images/favicon.png">
 
   <!-- OG Tags -->
-  <meta property="og:image" content="https://www.stinkyturdface.com/images/poop.jpeg" />
+  <meta property="og:image" content="https://www.stinkyturdface.com/images/present.jpg" />
+  <meta property="og:url" content="Congratulations.com">
+  <meta property="og:type" content="profile">
+  <meta property="og:title" content="A Baddington Website">
+  <meta property="og:description" content="This was made for you!">
 
 
 </head>
