adding facebook app id

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   <!-- OG Tags -->
   <meta property="og:image" content="https://www.stinkyturdface.com/images/present.jpg" />
   <meta property="og:url" content="Congratulations.com">
-  <meta property="og:type" content="profile">
+  <meta property="og:type" content="Gag">
   <meta property="og:title" content="A Baddington Website">
   <meta property="og:description" content="This was made for you!">
+  <meta property="fb:app_id" content="303062158026471">
 
 
 </head>
