--- a/index.html
+++ b/index.html
@@ -108,10 +108,14 @@
           <div class="about-descr">
 
             <p class="p-heading">This Website is intended as a gag! </p>
-            <p class="separator">Please don't feel bad. Your brother set this up. I'm sure he had the best intentions.
+            <p class="separator">Please don't feel bad. Austin Earls set this up. I'm sure he had the best intentions.
               <br>
               <br>
-            This website was created to generate profit. The developer is trying to raise $300. To have the website changed, please contact us at the facebook link below.</p>
+            My name Andrew Earls and I am a freelance web apps developer. I am raising money for a class I need to take to improve my credentials. Currently I have $20 twoard my goal of $300.
+            <br>
+            <br>
+             To have the website changed, please contact us at the facebook link below.
+           </p>
 
           </div>
 
