--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
   <meta property="og:description" content="This was made for you!">
   <meta property="fb:app_id" content="303062158026471">
 
+  <!-- Clear the cache -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 
 </head>
 
